--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Competitve<br> Programmer</h1><h2>ML Developer<br>Blockchain</h2>
+                <h1>Competitve<br> Programmer</h1><h2>Software Developer <br>Machine Learning<br>Blockchain</h2>
                 <button class="cta">Connect With Me
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
