--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
                       <p class="slider--item-description">Analyzed a Rock vs Mine classifier using Python and Streamlit, achieving 70% accuracy with 60 frequency samples, using Linear Regression.</p>
                     </a>
                   </li>
+		  <li class="slider--item slider--item-center">
+                    <a href="#0">
+                      <div class="slider--item-image">
+							<a href="https://github.com/VijetaPriya47/Water-Quality-Prediction-">
+   							 <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
+							</a>
+                      </div>
+                      <p class="slider--item-title">Water Potability  </p>
+                      <!-- &amp; -->
+                      <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly. This tool supports safe drinking water decisions by identifying potential health risks.</p>
+                    </a>
+                  </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
