--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Machine Learning Models</h2>
+              <h2>Projects</h2>
               <div class="work--lockup">
                 <ul class="slider">
+                  <!-- Project 1 -->
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://github.com/YourGithubUsername/SonarNet-Detection">
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Rock vs Mine classifier">
                       </div>
@@ -111,55 +112,68 @@
                       <p class="slider--item-description">Analyzed a Rock vs Mine classifier using Python and Streamlit, achieving 70% accuracy with 60 frequency samples, using Linear Regression.</p>
                     </a>
                   </li>
-		  <li class="slider--item slider--item-center">
-                    <a href="#0">
-                      <div class="slider--item-image">
-							<a href="https://github.com/VijetaPriya47/Water-Quality-Prediction-">
-   							 <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
-							</a>
-                      </div>
-                      <p class="slider--item-title">Water Potability  </p>
-                      <!-- &amp; -->
-                      <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly. This tool supports safe drinking water decisions by identifying potential health risks.</p>
-                    </a>
-                  </li>
+
+                  <!-- Project 2 -->
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://hello123451.streamlit.app/">
                       <div class="slider--item-image">
-							<a href="https://github.com/VijetaPriya47/Water-Quality-Prediction-">
-   							 <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
-							</a>
+                        <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
                       </div>
-                      <p class="slider--item-title">Water Potability  </p>
-                      <!-- &amp; -->
-                      <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly. This tool supports safe drinking water decisions by identifying potential health risks.</p>
+                      <p class="slider--item-title">Water Potability</p>
+                      <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly.</p>
                     </a>
                   </li>
+
+                  <!-- Project 3 -->
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://github.com/YourGithubUsername/Project3">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Coming Project">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="Project 3">
                       </div>
-                      <p class="slider--item-title">Coming Project</p>
-                      <p class="slider--item-description">Coming Project</p>
+                      <p class="slider--item-title">Project 3 Title</p>
+                      <p class="slider--item-description">Brief description of your third project goes here.</p>
+                    </a>
+                  </li>
+
+                  <!-- Project 4 -->
+                  <li class="slider--item">
+                    <a href="https://github.com/YourGithubUsername/Project4">
+                      <div class="slider--item-image">
+                        <img src="assets/img/project4-image.jpg" alt="Project 4">
+                      </div>
+                      <p class="slider--item-title">Project 4 Title</p>
+                      <p class="slider--item-description">Brief description of your fourth project goes here.</p>
+                    </a>
+                  </li>
+
+                  <!-- Project 5 -->
+                  <li class="slider--item">
+                    <a href="https://github.com/YourGithubUsername/Project5">
+                      <div class="slider--item-image">
+                        <img src="assets/img/project5-image.jpg" alt="Project 5">
+                      </div>
+                      <p class="slider--item-title">Project 5 Title</p>
+                      <p class="slider--item-description">Brief description of your fifth project goes here.</p>
                     </a>
                   </li>
                 </ul>
+
+                <!-- Add navigation arrows -->
                 <div class="slider--prev">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                  <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                    <path d="M561,1169C525,1155,10,640,3,612c-3-13,1-36,8-52c8-15,134-145,281-289C527,41,562,10,590,10c22,0,41,9,61,29
-                    c55,55,49,64-163,278L296,510h575c564,0,576,0,597,20c46,43,37,109-18,137c-19,10-159,13-590,13l-565,1l182,180
-                    c101,99,187,188,193,199c16,30,12,57-12,84C631,1174,595,1183,561,1169z"/>
-                  </g>
+                    viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
+                    <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
+                      <path d="M561,1169C525,1155,10,640,3,612c-3-13,1-36,8-52c8-15,134-145,281-289C527,41,562,10,590,10c22,0,41,9,61,29
+                      c55,55,49,64-163,278L296,510h575c564,0,576,0,597,20c46,43,37,109-18,137c-19,10-159,13-590,13l-565,1l182,180
+                      c101,99,187,188,193,199c16,30,12,57-12,84C631,1174,595,1183,561,1169z"/>
+                    </g>
                   </svg>
                 </div>
                 <div class="slider--next">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                  <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                    <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                  </g>
+                    <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
+                      <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
+                    </g>
                   </svg>
                 </div>
               </div>
@@ -309,13 +323,22 @@
           </li>
                               <!-- Pac-Man Game Section -->
           <li class="l-section section">
-            <div class="pacman">
-              <!-- <h2>Play Pac-Man!</h2> -->
-				<p style = "color: white; font-family: sans-serif; font-size: 14px;" margin-bottom:6px>
-				    <span>Score:</span>
-				    <span id="scoreEl">0</span>
-				</p>
-				<canvas></canvas>
+            <div class="work">
+              <h2>Let's Play Pacman!</h2>
+              <div class="game-wrapper">
+                <div class="game-container">
+                  <div class="score-container">
+                    <p class="score-text">Score: <span id="scoreEl">0</span></p>
+                  </div>
+                  <canvas id="gameCanvas"></canvas>
+                </div>
+                <div class="game-instructions">
+                  <h3>How to Play:</h3>
+                  <p>Use W A S D keys to move Pacman</p>
+                  <p>Eat all pellets to win!</p>
+                  <p>Avoid ghosts unless you have a power pellet</p>
+                </div>
+              </div>
             </div>
           </li>
 
