Add GitHub and Live Demo buttons to project cards

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="HTML5 website template">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
+  <meta name="modifier" content="Vijeta Priya">
   <link rel="stylesheet" href="assets/css/main.css">
     <style>
     /* Style for the canvas where Pac-Man will be displayed */
@@ -97,6 +98,7 @@
               </div>
             </div>
           </li>
+          <!-- PROJECTS-------------------------------------------------------------------------------------------------------------------------------------- -->
           <li class="l-section section">
             <div class="work">
               <h2>Projects</h2>
@@ -104,35 +106,41 @@
                 <ul class="slider">
                   <!-- Project 1 -->
                   <li class="slider--item slider--item-left">
-                    <a href="https://github.com/YourGithubUsername/SonarNet-Detection">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Rock vs Mine classifier">
-                      </div>
-                      <p class="slider--item-title">SonarNet Detection Platform</p>
-                      <p class="slider--item-description">Analyzed a Rock vs Mine classifier using Python and Streamlit, achieving 70% accuracy with 60 frequency samples, using Linear Regression.</p>
-                    </a>
+                    <div class="slider--item-image">
+                      <img src="assets/img/work-victory.jpg" alt="Rock vs Mine classifier">
+                    </div>
+                    <p class="slider--item-title">SonarNet Detection Platform</p>
+                    <p class="slider--item-description">Analyzed a Rock vs Mine classifier using Python and Streamlit, achieving 70% accuracy with 60 frequency samples, using Linear Regression.</p>
+                    <div class="project-links">
+                      <a href="https://github.com/YourGithubUsername/SonarNet-Detection" class="project-btn github-btn" target="_blank">GitHub</a>
+                      <a href="https://your-live-demo-url.com" class="project-btn demo-btn" target="_blank">Live Demo</a>
+                    </div>
                   </li>
 
                   <!-- Project 2 -->
                   <li class="slider--item slider--item-center">
-                    <a href="https://hello123451.streamlit.app/">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
-                      </div>
-                      <p class="slider--item-title">Water Potability</p>
-                      <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly.</p>
-                    </a>
+                    <div class="slider--item-image">
+                      <img src="assets/img/work-metiew-smith.jpg" alt="Safe Water and Disposal">
+                    </div>
+                    <p class="slider--item-title">Water Potability</p>
+                    <p class="slider--item-description">Developed a machine learning model to predict water potability using various algorithms, achieving 70% accuracy. The project involved analyzing key water quality factors like pH, Chloramines, and Conductivity, and visualizing patterns with Pandas, Matplotlib, and Plotly.</p>
+                    <div class="project-links">
+                      <a href="https://github.com/YourGithubUsername/WaterPotability" class="project-btn github-btn" target="_blank">GitHub</a>
+                      <a href="https://hello123451.streamlit.app/" class="project-btn demo-btn" target="_blank">Live Demo</a>
+                    </div>
                   </li>
 
                   <!-- Project 3 -->
                   <li class="slider--item slider--item-right">
-                    <a href="https://github.com/YourGithubUsername/Project3">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Project 3">
-                      </div>
-                      <p class="slider--item-title">Project 3 Title</p>
-                      <p class="slider--item-description">Brief description of your third project goes here.</p>
-                    </a>
+                    <div class="slider--item-image">
+                      <img src="assets/img/work-alex-nowak.jpg" alt="Project 3">
+                    </div>
+                    <p class="slider--item-title">Project 3 Title</p>
+                    <p class="slider--item-description">Brief description of your third project goes here.</p>
+                    <div class="project-links">
+                      <a href="https://github.com/YourGithubUsername/Project3" class="project-btn github-btn" target="_blank">GitHub</a>
+                      <a href="#" class="project-btn demo-btn" target="_blank">Live Demo</a>
+                    </div>
                   </li>
 
                   <!-- Project 4 -->
